# obs-studio-fedora-builds-browser

./: CMakeLists.txt  CMakePresets.json  README.rst
.github/workflows/: build-project.yaml  sync.yml
UI/: obs-app.cpp  window-basic-settings.cpp
libobs/: obs-display.c
libobs-metal/: CMakeLists.txt  OBSBlendState.swift  OBSIndexBuffer.swift  OBSMetalDevice.swift  OBSResourceCollection.swift  OBSSamplerState.swift  OBSShader.swift  OBSShaderParser.swift  OBSStageSurface.swift  OBSSwapChain.swift  OBSTexture.swift  OBSVertexBuffer.swift  OBSZStencilBuffer.swift  README.md  Sequence+Hashable.swift  libobs+Extensions.swift  libobs-metal-Bridging-Header.h  metal-subsystem.swift
libobs/cmake/: os-macos.cmake
libobs/data/: default.effect
libobs/graphics/: graphics.h
plugins/mac-avcapture/: plugin-main.m
plugins/mac-capture/: mac-display-capture.m  mac-sck-video-capture.m
